# MarkingHack2023_Foxhound

./: README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  enums.py  fill_db.py  main.py  utils.py
backend/app/database/: __init__.py  base.py  participant.py  product.py  product_in_turnover.py  product_move.py  product_out_turnover.py  sales_point.py  user.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 278e3e0985df_init.py  479d9d64ab7e_init.py  55e2fa9b607b_change_volume_to_str.py  7fc850b29947_init.py  bb6062829e6e_init.py
backend/app/routers/: auth.py
backend/app/schemes/: __init__.py  auth.py  inn_balance.py  on_market.py  user.py
backend/app/services/: auth.py  base.py  import_vs_local.py  import_vs_local_series.py  inn_balance.py  on_market.py
compose/backend/: Dockerfile
compose/frontend/: Dockerfile
compose/nginx/: foxhound.conf
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: LoginView.vue  PlotView.vue
research/Anton/: Anton.ipynb  to_backend.py
research/Faris/: supply_chains.ipynb
research/Sergey/: utils.py  utils_example.ipynb
